[package]
name = "slog_kmsg"
description = "slog drain to write records into the kernel's dmesg ring buffer"
homepage = "https://github.com/srwalter/slog_kmsg"
repository = "https://github.com/srwalter/slog_kmsg"
license = "Apache-2.0"
version = "0.1.2"
authors = ["Steven Walter <stevenrwalter@gmail.com>"]

[dependencies]
slog = "2.0"
slog-async = "2.0"
